--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0px;
 }
 body{ 
-    background-image: url("bg-image-2.png");
+    background-image: url("p4.webp");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -12,7 +12,7 @@ body{
     overflow: hidden;
 }
 .h1{
-    color: rgb(218, 65, 9);
+    color: rgb(255, 242, 235);
 }
 .image{
     height: 10rem; width: 10rem;
@@ -22,26 +22,26 @@ body{
 }
 .h3{
     text-align: center; 
-    background-color:rgb(187, 187, 247); 
+    background-color:rgb(216, 241, 125); 
     display: table;
     margin: 0px auto 0px auto; 
-    border:black; border-width:2px; border-style:solid;
+    border:rgb(248, 225, 225); border-width:1px; border-style:solid;
 }
 .p{
     margin: 0px auto 0px auto; 
     text-align: center;
-    color: rgb(218, 65, 9);
+    color: rgb(168, 164, 161);
 }
     
 
 .h4{
-    color: rgb(218, 65, 9);
+    color: rgb(185, 174, 169);
     margin-left: 1rem;
     font-size: 20px;
 }
 .p2{
     margin-left: 1rem;
-    color: rgb(218, 65, 9);
+    color: rgb(60, 60, 207);
     text-decoration: none
 }
 .line{
@@ -55,7 +55,10 @@ body{
     color: white;
     border-radius: 2px;
     margin-top:20px;
-    margin-left: 3rem;
+    margin-left: -1rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    
 }
 .fa-twitter {
     background: #007bb5;
@@ -63,6 +66,8 @@ body{
     border-radius: 2px;
     margin-top: 20px;
     margin-left: 10px;
+    width: 1.5rem;
+    height: 1.5rem;
 }
 .container{
     width: 350px;
